antlr3/src/main/java/com/ltchen/antlr/antlr3/math/MathParser.java
// $ANTLR 3.5.1 D:\\Antlr\\V3\\MathParser.g 2019-04-17 03:20:28
 package com.ltchen.antlr.antlr3.math; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class MathParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "APOSTROPHE", "ASSIGN", "CARET", 
		"DIGIT", "FLOAT", "FUNCTIONS", "HELP", "INTEGER", "LEFT_PAREN", "LETTER", 
		"LIST", "LOWER", "NAME", "NEWLINE", "NONCONTROL_CHAR", "NUMBER", "PRINT", 
		"RIGHT_PAREN", "SIGN", "SPACE", "STRING_LITERAL", "SYMBOL", "UPPER", "VARIABLES", 
		"WHITESPACE", "COMBINE", "DEFINE", "DERIVATIVE", "FUNCTION", "POLYNOMIAL", 
		"TERM"
	};
	public static final int EOF=-1;
	public static final int APOSTROPHE=4;
	public static final int ASSIGN=5;
	public static final int CARET=6;
	public static final int DIGIT=7;
	public static final int FLOAT=8;
	public static final int FUNCTIONS=9;
	public static final int HELP=10;
	public static final int INTEGER=11;
	public static final int LEFT_PAREN=12;
	public static final int LETTER=13;
	public static final int LIST=14;
	public static final int LOWER=15;
	public static final int NAME=16;
	public static final int NEWLINE=17;
	public static final int NONCONTROL_CHAR=18;
	public static final int NUMBER=19;
	public static final int PRINT=20;
	public static final int RIGHT_PAREN=21;
	public static final int SIGN=22;
	public static final int SPACE=23;
	public static final int STRING_LITERAL=24;
	public static final int SYMBOL=25;
	public static final int UPPER=26;
	public static final int VARIABLES=27;
	public static final int WHITESPACE=28;
	public static final int COMBINE=29;
	public static final int DEFINE=30;
	public static final int DERIVATIVE=31;
	public static final int FUNCTION=32;
	public static final int POLYNOMIAL=33;
	public static final int TERM=34;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "script", "exponent", "derivative", "listOption", "coefficient", 
		"assign", "printTarget", "print", "define", "interactiveStatement", "term", 
		"list", "combine", "terminator", "value", "help", "functionEval", "statement", 
		"polynomial"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public MathParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public MathParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public MathParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return MathParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\Antlr\\V3\\MathParser.g"; }


	public static class script_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "script"
	// D:\\Antlr\\V3\\MathParser.g:30:1: script : ( statement )* EOF !;
	public final script_return script() throws RecognitionException {
		script_return retval = new script_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope statement1 =null;

		Object EOF2_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "script");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(30, 0);

		try {
			// D:\\Antlr\\V3\\MathParser.g:30:7: ( ( statement )* EOF !)
			dbg.enterAlt(1);

			// D:\\Antlr\\V3\\MathParser.g:30:9: ( statement )* EOF !
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(30,9);
			// D:\\Antlr\\V3\\MathParser.g:30:9: ( statement )*
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==HELP||LA1_0==LIST||LA1_0==NAME||LA1_0==PRINT) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Antlr\\V3\\MathParser.g:30:9: statement
					{
					dbg.location(30,9);
					pushFollow(FOLLOW_statement_in_script95);
					statement1=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement1.getTree());

					}
					break;

				default :
					break loop1;
				}
			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(30,23);
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_script98); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(30, 23);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "script");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "script"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// D:\\Antlr\\V3\\MathParser.g:32:1: statement : ( assign | define | interactiveStatement | combine | print );
	public final statement_return statement() throws RecognitionException {
		statement_return retval = new statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assign3 =null;
		ParserRuleReturnScope define4 =null;
		ParserRuleReturnScope interactiveStatement5 =null;
		ParserRuleReturnScope combine6 =null;
		ParserRuleReturnScope print7 =null;


		try { dbg.enterRule(getGrammarFileName(), "statement");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(32, 0);

		try {
			// D:\\Antlr\\V3\\MathParser.g:32:10: ( assign | define | interactiveStatement | combine | print )
			int alt2=5;
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			switch ( input.LA(1) ) {
			case NAME:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==ASSIGN) ) {
					int LA2_4 = input.LA(3);
					if ( (LA2_4==NAME) ) {
						int LA2_6 = input.LA(4);
						if ( (LA2_6==SIGN) ) {
							alt2=4;
						}
						else if ( (LA2_6==EOF||LA2_6==LEFT_PAREN||LA2_6==NEWLINE) ) {
							alt2=1;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 6, input);
								dbg.recognitionException(nvae);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}
					else if ( (LA2_4==NUMBER) ) {
						alt2=1;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 4, input);
							dbg.recognitionException(nvae);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA2_1==LEFT_PAREN) ) {
					alt2=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case HELP:
			case LIST:
				{
				alt2=3;
				}
				break;
			case PRINT:
				{
				alt2=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Antlr\\V3\\MathParser.g:32:12: assign
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(32,12);
					pushFollow(FOLLOW_assign_in_statement107);
					assign3=assign();
					state._fsp--;

					adaptor.addChild(root_0, assign3.getTree());

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// D:\\Antlr\\V3\\MathParser.g:32:21: define
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(32,21);
					pushFollow(FOLLOW_define_in_statement111);
					define4=define();
					state._fsp--;

					adaptor.addChild(root_0, define4.getTree());

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// D:\\Antlr\\V3\\MathParser.g:32:30: interactiveStatement
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(32,30);
					pushFollow(FOLLOW_interactiveStatement_in_statement115);
					interactiveStatement5=interactiveStatement();
					state._fsp--;

					adaptor.addChild(root_0, interactiveStatement5.getTree());

					}
					break;
				case 4 :
					dbg.enterAlt(4);

					// D:\\Antlr\\V3\\MathParser.g:32:53: combine
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(32,53);
					pushFollow(FOLLOW_combine_in_statement119);
					combine6=combine();
					state._fsp--;

					adaptor.addChild(root_0, combine6.getTree());

					}
					break;
				case 5 :
					dbg.enterAlt(5);

					// D:\\Antlr\\V3\\MathParser.g:32:63: print
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(32,63);
					pushFollow(FOLLOW_print_in_statement123);
					print7=print();
					state._fsp--;

					adaptor.addChild(root_0, print7.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(32, 67);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "statement");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "statement"


	public static class interactiveStatement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "interactiveStatement"
	// D:\\Antlr\\V3\\MathParser.g:36:1: interactiveStatement : ( help | list );
	public final interactiveStatement_return interactiveStatement() throws RecognitionException {
		interactiveStatement_return retval = new interactiveStatement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope help8 =null;
		ParserRuleReturnScope list9 =null;


		try { dbg.enterRule(getGrammarFileName(), "interactiveStatement");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(36, 0);

		try {
			// D:\\Antlr\\V3\\MathParser.g:36:21: ( help | list )
			int alt3=2;
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==HELP) ) {
				alt3=1;
			}
			else if ( (LA3_0==LIST) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Antlr\\V3\\MathParser.g:36:23: help
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(36,23);
					pushFollow(FOLLOW_help_in_interactiveStatement133);
					help8=help();
					state._fsp--;

					adaptor.addChild(root_0, help8.getTree());

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// D:\\Antlr\\V3\\MathParser.g:36:30: list
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(36,30);
					pushFollow(FOLLOW_list_in_interactiveStatement137);
					list9=list();
					state._fsp--;

					adaptor.addChild(root_0, list9.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(36, 33);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "interactiveStatement");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "interactiveStatement"


	public static class assign_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assign"
	// D:\\Antlr\\V3\\MathParser.g:40:1: assign : NAME ASSIGN value terminator -> ^( ASSIGN NAME value ) ;
	public final assign_return assign() throws RecognitionException {
		assign_return retval = new assign_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NAME10=null;
		Token ASSIGN11=null;
		ParserRuleReturnScope value12 =null;
		ParserRuleReturnScope terminator13 =null;

		Object NAME10_tree=null;
		Object ASSIGN11_tree=null;
		RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
		RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
		RewriteRuleSubtreeStream stream_terminator=new RewriteRuleSubtreeStream(adaptor,"rule terminator");
		RewriteRuleSubtreeStream stream_value=new RewriteRuleSubtreeStream(adaptor,"rule value");

		try { dbg.enterRule(getGrammarFileName(), "assign");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(40, 0);

		try {
			// D:\\Antlr\\V3\\MathParser.g:40:7: ( NAME ASSIGN value terminator -> ^( ASSIGN NAME value ) )
			dbg.enterAlt(1);

			// D:\\Antlr\\V3\\MathParser.g:40:9: NAME ASSIGN value terminator
			{
			dbg.location(40,9);
			NAME10=(Token)match(input,NAME,FOLLOW_NAME_in_assign147);  
			stream_NAME.add(NAME10);
			dbg.location(40,14);
			ASSIGN11=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assign149);  
			stream_ASSIGN.add(ASSIGN11);
			dbg.location(40,21);
			pushFollow(FOLLOW_value_in_assign151);
			value12=value();
			state._fsp--;

			stream_value.add(value12.getTree());dbg.location(40,27);
			pushFollow(FOLLOW_terminator_in_assign153);
			terminator13=terminator();
			state._fsp--;

			stream_terminator.add(terminator13.getTree());
			// AST REWRITE
			// elements: NAME, ASSIGN, value
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 40:38: -> ^( ASSIGN NAME value )
			{
				dbg.location(40,41);
				// D:\\Antlr\\V3\\MathParser.g:40:41: ^( ASSIGN NAME value )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(40,43);
				root_1 = (Object)adaptor.becomeRoot(stream_ASSIGN.nextNode(), root_1);
				dbg.location(40,50);
				adaptor.addChild(root_1, stream_NAME.nextNode());dbg.location(40,55);
				adaptor.addChild(root_1, stream_value.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(40, 60);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "assign");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "assign"


	public static class value_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "value"
	// D:\\Antlr\\V3\\MathParser.g:42:1: value : ( NUMBER | NAME | functionEval );
	public final value_return value() throws RecognitionException {
		value_return retval = new value_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NUMBER14=null;
		Token NAME15=null;
		ParserRuleReturnScope functionEval16 =null;

		Object NUMBER14_tree=null;
		Object NAME15_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "value");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(42, 0);

		try {
			// D:\\Antlr\\V3\\MathParser.g:42:6: ( NUMBER | NAME | functionEval )
			int alt4=3;
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==NUMBER) ) {
				alt4=1;
			}
			else if ( (LA4_0==NAME) ) {
				int LA4_2 = input.LA(2);
				if ( (LA4_2==LEFT_PAREN) ) {
					alt4=3;
				}
				else if ( (LA4_2==EOF||LA4_2==NEWLINE) ) {
					alt4=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Antlr\\V3\\MathParser.g:42:8: NUMBER
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(42,8);
					NUMBER14=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_value171); 
					NUMBER14_tree = (Object)adaptor.create(NUMBER14);
					adaptor.addChild(root_0, NUMBER14_tree);

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// D:\\Antlr\\V3\\MathParser.g:42:17: NAME
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(42,17);
					NAME15=(Token)match(input,NAME,FOLLOW_NAME_in_value175); 
					NAME15_tree = (Object)adaptor.create(NAME15);
					adaptor.addChild(root_0, NAME15_tree);

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// D:\\Antlr\\V3\\MathParser.g:42:24: functionEval
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(42,24);
					pushFollow(FOLLOW_functionEval_in_value179);
					functionEval16=functionEval();
					state._fsp--;

					adaptor.addChild(root_0, functionEval16.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(42, 35);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "value");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "value"


	public static class functionEval_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "functionEval"
	// D:\\Antlr\\V3\\MathParser.g:46:1: functionEval : fn= NAME LEFT_PAREN (v= NUMBER |v= NAME ) RIGHT_PAREN -> ^( FUNCTION $fn $v) ;
	public final functionEval_return functionEval() throws RecognitionException {
		functionEval_return retval = new functionEval_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token fn=null;
		Token v=null;
		Token LEFT_PAREN17=null;
		Token RIGHT_PAREN18=null;

		Object fn_tree=null;
		Object v_tree=null;
		Object LEFT_PAREN17_tree=null;
		Object RIGHT_PAREN18_tree=null;
		RewriteRuleTokenStream stream_NUMBER=new RewriteRuleTokenStream(adaptor,"token NUMBER");
		RewriteRuleTokenStream stream_RIGHT_PAREN=new RewriteRuleTokenStream(adaptor,"token RIGHT_PAREN");
		RewriteRuleTokenStream stream_LEFT_PAREN=new RewriteRuleTokenStream(adaptor,"token LEFT_PAREN");
		RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");

		try { dbg.enterRule(getGrammarFileName(), "functionEval");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(46, 0);

		try {
			// D:\\Antlr\\V3\\MathParser.g:47:3: (fn= NAME LEFT_PAREN (v= NUMBER |v= NAME ) RIGHT_PAREN -> ^( FUNCTION $fn $v) )
			dbg.enterAlt(1);

			// D:\\Antlr\\V3\\MathParser.g:47:5: fn= NAME LEFT_PAREN (v= NUMBER |v= NAME ) RIGHT_PAREN
			{
			dbg.location(47,7);
			fn=(Token)match(input,NAME,FOLLOW_NAME_in_functionEval194);  
			stream_NAME.add(fn);
			dbg.location(47,13);
			LEFT_PAREN17=(Token)match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_functionEval196);  
			stream_LEFT_PAREN.add(LEFT_PAREN17);
			dbg.location(47,24);
			// D:\\Antlr\\V3\\MathParser.g:47:24: (v= NUMBER |v= NAME )
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==NUMBER) ) {
				alt5=1;
			}
			else if ( (LA5_0==NAME) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Antlr\\V3\\MathParser.g:47:25: v= NUMBER
					{
					dbg.location(47,26);
					v=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_functionEval201);  
					stream_NUMBER.add(v);

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// D:\\Antlr\\V3\\MathParser.g:47:36: v= NAME
					{
					dbg.location(47,37);
					v=(Token)match(input,NAME,FOLLOW_NAME_in_functionEval207);  
					stream_NAME.add(v);

					}
					break;

			}
			} finally {dbg.exitSubRule(5);}
			dbg.location(47,44);
			RIGHT_PAREN18=(Token)match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_functionEval210);  
			stream_RIGHT_PAREN.add(RIGHT_PAREN18);

			// AST REWRITE
			// elements: fn, v
			// token labels: v, fn
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleTokenStream stream_v=new RewriteRuleTokenStream(adaptor,"token v",v);
			RewriteRuleTokenStream stream_fn=new RewriteRuleTokenStream(adaptor,"token fn",fn);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 47:56: -> ^( FUNCTION $fn $v)
			{
				dbg.location(47,59);
				// D:\\Antlr\\V3\\MathParser.g:47:59: ^( FUNCTION $fn $v)
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(47,61);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTION, "FUNCTION"), root_1);
				dbg.location(47,71);
				adaptor.addChild(root_1, stream_fn.nextNode());dbg.location(47,75);
				adaptor.addChild(root_1, stream_v.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(47, 76);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "functionEval");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "functionEval"


	public static class terminator_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

